--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -279,6 +279,7 @@
         <DCCReference Include="Entity\VK.Entity.Group.Youla.pas"/>
         <DCCReference Include="Controllers\VK.Streaming.pas"/>
         <DCCReference Include="Entity\VK.Entity.Streaming.pas"/>
+        <DCCReference Include="Entity\VK.Entity.Message.Templates.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
@@ -338,7 +339,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\20.0\Bpl\VKComponents.bpl" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\..\..\..\Public\Documents\Embarcadero\Studio\20.0\Bpl\VKComponents.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>VKComponents.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
