Clear, fix, refactor

--- a/Samples/SQLite/SQLiteWork.dproj
+++ b/Samples/SQLite/SQLiteWork.dproj
@@ -191,6 +191,7 @@
             <Form>Form1</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="..\..\Tools\VK.Tool.Sqlite.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
