GetConversationMembers, Keyboard constructor, Alias Parser, API version 1.44, IsAdmin for Bot, Sync refactoring/console,
GetConversationMembers, Keyboard constructor, Alias Parser, API version 1.44, IsAdmin for Bot, Sync refactoring/console, JSON Params,

--- a/VKComponents.dproj
+++ b/VKComponents.dproj
@@ -263,6 +263,7 @@
         <DCCReference Include="Entity\VK.Entity.Message.Templates.pas"/>
         <DCCReference Include="Utils\VK.Bot.Commands.pas"/>
         <DCCReference Include="Entity\VK.Entity.Common.pas"/>
+        <DCCReference Include="VK.Params.pas"/>
         <RcItem Include="Media\vk group 2.bmp">
             <ResourceType>BITMAP</ResourceType>
             <ResourceId>TVkGroupEventsController</ResourceId>
